name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
-- description:
homepage:            https://github.com/joeygibson/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Joey Gibson
maintainer:          joey@joeygibson.com
copyright:           2020 Joey Gibson
category:            Web
build-type:          Simple
extra-source-files:  data/dict.txt
cabal-version:       >=1.10
extra-source-files:  README.md

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                        random,
                        split
